# ftp-demo

./: .clang-format  .gitignore  CMakeLists.txt
app/: CMakeLists.txt  client.cpp  echo_client.cpp  echo_server.cpp  server.cpp
include/: common.h  gate.h
include/utils/: logger.h  sendrecv_msg.h  tools.h
plugin/: CMakeLists.txt
plugin/echo/: CMakeLists.txt  echo_client.cpp  echo_server.cpp
plugin/ftp/: ftp_client.cpp  ftp_server.cpp
plugin/mock/: CMakeLists.txt  add.cpp
src/: CMakeLists.txt  common.cpp  gate.cpp
src/utils/: CMakeLists.txt  sendrecv_msg.cpp  tools.cpp
test/: CMakeLists.txt  load_plugin_test.cpp  mth_log_test.cpp  str_ch_test.cpp  tools_test.cpp
